[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ceorater-mcp"
version = "0.1.0"
description = "MCP server for CEORater — CEO performance analytics for LLM agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://www.ceorater.com"
Documentation = "https://www.ceorater.com/api-docs.html"
Repository = "https://github.com/jmaietta/ceorater-mcp"

[project.scripts]
ceorater-mcp = "ceorater_mcp.server:main"
